force-app/Exercises/main/default/objects/Customer_Story__c/Customer_Story__c.object-meta.xml
<CustomObject>
    <description>Used to track customer success stories.</description>
    <label>Customer Story</label>
    <nameField>
        <label>Customer Story Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>