force-app/Exercises/main/default/objects/Customer_Story__c/fields/Installation_Time_days__c.field-meta.xml
<CustomField>
    <fullName>Installation_Time_days__c</fullName>
    <description>Installation time</description>
    <inlineHelpText>Number of days from purchase to installation complete</inlineHelpText>
    <label>Installation Time (days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>