force-app/Exercises/main/default/objects/Customer_Story__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Primary Contact of the Account whose success story this is.</description>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Stories</relationshipLabel>
    <relationshipName>Customer_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>