force-app/Exercises/main/default/objects/Customer_Story__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <description>Products bought by the customer</description>
    <inlineHelpText>Select one or more products</inlineHelpText>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Desktops</fullName>
            </value>
            <value>
                <fullName>Laptops</fullName>
            </value>
            <value>
                <fullName>Networking Equipment</fullName>
            </value>
            <value>
                <fullName>Printers</fullName>
            </value>
            <value>
                <fullName>Servers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>