force-app/Exercises/main/default/objects/Customer_Story__c/fields/Story_Description__c.field-meta.xml
<CustomField>
    <fullName>Story_Description__c</fullName>
    <label>Story Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>